# origin

./: .gitignore  CMakeLists.txt  DZ11.cpp  DZ22.cpp  DZ6.cpp  Dockerfile  dbdialog.cpp  dbdialog.h  dbdialog.ui  gitignore  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  udpworker.cpp  udpworker.h  zadanie_10_1_1.cpp  zadanie_10_1_2.cpp  zadanie_11_1_1.cpp  zadanie_11_2_1.cpp  zadanie_11_3_1.cpp  zadanie_12_1_1.txt  zadanie_12_2_1.cpp  zadanie_8_1_1.cpp  zadanie_8_1_2.cpp  zadanie_8_2_1.cpp  zadanie_8_2_1_1.cpp  zadanie_8_2_2.cpp  zadanie_8_2_2_1.cpp  zadanie_8_2_3.cpp  zadanie_8_2_3_1.cpp  zadanie_8_3_1.cpp  zadanie_8_3_2.cpp  zadanie_8_4_1.cpp  zadanie_8_5_1.cpp  zadanie_9_1_1.cpp  zadanie_9_1_2.cpp  zadanie_9_1_3.cpp
Lesson1/Task2/: smart_array_copy.cpp
Lesson2/Task 1/: main.cpp  my_list.h
Lesson2/Task 2/: main.cpp  my_list.h
Lesson3/Task 1/: square.cpp
Lesson3/Task 2/: Table_2.cpp  table.cpp
Lesson3/Task 3/: counter.cpp
Lesson4/Task 1/: frequency.cpp
Lesson4/Task 2/: duplicate.cpp
Lesson4/Tssk 3/: vector.cpp
Lesson5/Task 1/: vector.cpp
Lesson5/Task 2/: container.cpp
lesson_1/task_2/: task_2.cpp
lesson_1/task_3/: task_3.cpp
lesson_2/task_2_1/: task_2_1.cpp
lesson_2/task_2_2/: task_2_2.cpp
lesson_3/task_3_1/: task_3_1.cpp
lesson_3/task_3_2/: task_3_2.cpp
lesson_4/task_4_1/: task_4_1.cpp
lesson_4/task_4_2/: task_4_2.cpp
lesson_4/task_4_3/: task_4_3.cpp
lesson_5/task_5_1/: main.cpp  math_functions.cpp  math_functions.h
lesson_5/task_5_2/: counter.cpp  counter.h  main.cpp
lesson_5/task_5_3/: EquilateralTriangle.cpp  (+20 more)
(+1 files in other folders)
